--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
-    <h1 style="font-size: 60px;">次北固山下</h1>
-    <p style="font-size: 40px;">王湾〔唐代〕</p>
-    <p style="font-size: 40px;">客路青山外，行舟绿水前。</p>
-    <p style="font-size: 40px;">潮平两岸阔，风正一帆悬。</p>
-    <p style="font-size: 40px;">海日生残夜，江春入旧年。</p>
-    <p style="font-size: 40px;">乡书何处达？归雁洛阳边。</p>
+<!DOCTYPE html>
+<html lang="cn">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>字体样式</title>
+    <style>
+      * {
+        text-align: center;
+      }
+      /* CSS样式 */
+      h1 {
+        font-family: 方正毡笔黑简体;
+        font-size: 60px;
+      }
+      p {
+        font-size: 40px; /*字体大小*/
+        font-family: 方正粗活意简体;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>次北固山下</h1>
+    <p>王湾〔唐代〕</p>
+    <p>客路青山外，行舟绿水前。</p>
+    <p>潮平两岸阔，风正一帆悬。</p>
+    <p>海日生残夜，江春入旧年。</p>
+    <p>乡书何处达？归雁洛阳边。</p>
+  </body>
+</html>
