--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
       * {
         text-align: center;
       }
-      /* CSS样式 */
       h1 {
-        font-family: 方正毡笔黑简体;
         font-size: 60px;
       }
       p {
-        font-size: 40px; /*字体大小*/
-        font-family: 方正粗活意简体;
+        font-size: 40px;
       }
     </style>
   </head>
